tests/expectations/compiler/finalize/decrement_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372005]: Unknown function `decrement`
    --> compiler-test:11:9
     |
  11 |         decrement(amounts, addr, amount);
     |         ^^^^^^^^^
"""]
